--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -78,9 +78,19 @@ jobs:
 
       - name: Run Bandit scan
         run: |
-          bandit -r . -f json -o bandit_report.json
+          mkdir -p security-reports
+          bandit -r . -f json -o security-reports/bandit_report_$(date +%Y%m%d_%H%M%S).json
           # Fail if high severity issues found
           bandit -r . -ll
+
+      #push report to repo
+      - name: Commit and push report
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add security-reports/
+          git commit -m "Add security scan report [skip ci]" || echo "No changes to commit"
+          git push
 
       # Docker image scanning with OWASP tools
       - name: Build Docker image
