--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -83,11 +83,11 @@ jobs:
           # Fail if high severity issues found
           bandit -r . -ll
 
-      #push report to repo
+      # push report to repo
       - name: Commit and push report
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          git config --global user.name "richarddrochner"
+          git config --global user.email "len_drochner@web.de"
           git add security-reports/
           git commit -m "Add security scan report [skip ci]" || echo "No changes to commit"
           git push
