--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -84,16 +84,16 @@ jobs:
           bandit -r . -ll
 
       # push report to repo
-      - name: Commit and push report
-        env:
-          GH_TOKEN: ${{ secrets.SOMEBOT_SECRET }}
-        run: |
-          git config --global user.name "richarddrochner"
-          git config --global user.email "len_drochner@web.de"
-          git remote set-url origin "https://x-access-token:$GH_TOKEN@github.com/${{ github.repository }}.git"
-          git add security-reports/
-          git commit -m "Add security scan report [skip ci]" || echo "No changes to commit"
-          git push
+  #    - name: Commit and push report
+  #     env:
+  #        GH_TOKEN: ${{ secrets.SOMEBOT_SECRET }}
+  #      run: |
+  #        git config --global user.name "richarddrochner"
+  #        git config --global user.email "len_drochner@web.de"
+  #        git remote set-url origin "https://x-access-token:$GH_TOKEN@github.com/${{ github.repository }}.git"
+  #        git add security-reports/
+  #        git commit -m "Add security scan report [skip ci]" || echo "No changes to commit"
+  #        git push
 
       # Docker image scanning with OWASP tools
       - name: Build Docker image
