--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -79,7 +79,7 @@ jobs:
       - name: Run Bandit scan
         run: |
           mkdir -p security-reports
-          bandit -r . -f json -o security-reports/bandit_report_$(date +%Y%m%d_%H%M%S).json
+          bandit -r . -f json -o security-reports/bandit_report.json
           # Fail if high severity issues found
           bandit -r . -ll
 
