--- a/argocd-app.yaml
+++ b/argocd-app.yaml
@@ -10,5 +10,5 @@ spec:
   source:
     repoURL: 'https://github.com/richarddrochner/somebot'
     targetRevision: HEAD
-    path: 'k8s'
+    path: 'kubernetes'
   project: default
