--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -20,4 +20,4 @@ spec:
             - containerPort: 7861
           # command: ["/bin/bash", "-c", "while true; do sleep 3600; done"]
       imagePullSecrets:
-        - name: somebot_secret  # Das ImagePullSecret, das du vorher erstellt hast
+        - name: somebot-secret  # Das ImagePullSecret, das du vorher erstellt hast
