--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -110,13 +110,12 @@ jobs:
       - name: Run Dependency-Check on Docker image
         run: |
           docker save ghcr.io/$USER/somebot -o image.tar
-          java -jar /opt/dependency-check/bin/dependency-check.sh \
+          java -jar /opt/dependency-check/lib/dependency-check-core.jar \
           --scan image.tar \
           --project "MyApp" \
           --out ./reports \
           --format JSON \
           --format HTML \
-          --cveValidForHours 24 \          # Use cached data if <24h old
           --disableRetireJS \              # Temporary workaround
           --connectionTimeout 30000 \      # 30-second timeout
           --connectionRetryCount 5         # Retry failed connections
