--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -109,7 +109,10 @@ jobs:
 
       - name: Run Dependency-Check on Docker image
         run: |
-          docker save ghcr.io/${{ github.repository_owner }}/somebot -o image.tar
+          # Convert owner name to lowercase
+          LOWER_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          
+          docker save ghcr.io/${LOWER_OWNER}/somebot -o image.tar
           java -jar /opt/dependency-check/lib/dependency-check-core.jar \
           --scan image.tar \
           --project "MyApp" \
