--- a/Dockerfile.trivy-analysis
+++ b/Dockerfile.trivy-analysis
@@ -7,4 +7,4 @@ COPY trivy_output.json /app/trivy_output.json
 # Expose the port
 EXPOSE 7861
 
-CMD ["python", "mcp_server/mcp_server.py"]
+CMD ["python", "main.py"]
