--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -16,6 +16,8 @@ spec:
       containers:
         - name: somebot
           image: ghcr.io/richarddrochner/somebot-with-trivy-output:latest
+          ports:
+            - containerPort: 7861
           # command: ["/bin/bash", "-c", "while true; do sleep 3600; done"]
       imagePullSecrets:
         - name: somebot-secret  # Das ImagePullSecret, das du vorher erstellt hast
