--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -28,7 +28,7 @@ spec:
         - name: DISCORD_WEBHOOK_URL
           valueFrom:
             secretKeyRef:
-              name: SOMEBOT_SECRET
+              name: somebot_secret
               key: discord-webhook-url
         - name: MODEL_HUMOR
           value: "/app/humor_prompt.txt"
