making code long running so kubernetes hopefully doesnt crash it

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,9 +1,12 @@
-apiVersion: batch/v1
-kind: Job
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: somebot-app
   namespace: default
 spec:
+  replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: somebot
@@ -18,7 +21,6 @@ spec:
       containers:
       - name: somebot
         image: ghcr.io/richarddrochner/somebot:latest
-        restartPolicy: Never
         workingDir: /app
         env:
         - name: OLLAMA_HOST
